[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ue4ss_mod_build_tools"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = []
authors = [
  { name = "Mythical", email = "MythicalData@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "colorama",
  "requests",
  "rich",
  "rich_argparse",
]

[project.urls]
Documentation = "https://github.com/Mythical-Github/ue4ss_mod_build_tools/blob/main/README.md"
Issues = "https://github.com/Mythical-Github/ue4ss_mod_build_tools/issues"
Source = "https://github.com/Mythical-Github/ue4ss_mod_build_tools"

[project.scripts]
ue4ss_mod_build_tools = "ue4ss_mod_build_tools.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ue4ss_mod_build_tools/_version.py"

[tool.hatch.env]
requires = ["hatch-pip-compile"]

[tool.hatch.envs.default]
type = "pip-compile"
path = ".venv"
pip-compile-resolver = "uv"
pip-compile-installer = "uv"

[tool.hatch.envs.build]
template = "build"
installer = "uv"
dependencies = [
  "pyinstaller",
]

[tool.hatch.envs.build.scripts]
exe = [
  "pyinstaller --noconfirm --onefile --console --name ue4ss_mod_build_tools --icon=assets/images/icons/project_main_icon.ico src/ue4ss_mod_build_tools/__main__.py",
]

[tool.hatch.envs.scripts]
template = "scripts"
detached = true
installer = "uv"

[tool.hatch.envs.scripts.scripts]
clean = "git clean -d -X --force"
refresh-deps = [
  "hatch env remove default",
  "python -c \"import os; os.remove('requirements.txt')\"",
  "hatch env create default",
]
